10_ContainerOrchestrationKubernetes/16_HelmDemo/test-ingress_v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
spec:
  rules:
  - host: 143-42-222-131.ip.linodeusercontent.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
