10_ContainerOrchestrationKubernetes/16_HelmDemo/test-ingress_v3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 143-42-223-137.ip.linodeusercontent.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
